update of fake news project

--- a/Fake News Project.ipynb
+++ b/Fake News Project.ipynb
@@ -7,6 +7,19 @@
    "source": [
     "## Fake News Project\n",
     "\n",
+    "I use the DataSet \"news.csv\" to create a model that can predict if some news article is fake or real. I user the Tf-idf vectorization to transform the data and the Passive Aggressive Algorith Model to predict the label.\n",
+    "\n",
+    "**Passive Aggressive Classifier**\n",
+    "\n",
+    "Is a supervised learning technique that is commonly used in online classification problems.\n",
+    "\n",
+    "The Passive Aggressive Classifier is particularly useful in situations where there is a large amount of data that is continuously arriving, as it is designed to work well with streaming data,\n",
+    "\n",
+    "The key idea behind the Passive Aggressive Classifier is to make an aggressive update to the model when a new data point is misclassified, and to make a passive update when a data point is classified correctly, hence it's name.\n",
+    "\n",
+    "----\n",
+    "\n",
+    "**This is one of my first project and contains verys simple data analysis work**\n",
     "\n",
     "---"
    ]
@@ -221,14 +234,6 @@
    "source": [
     "df.rename(columns={'Unnamed: 0':'id news'}, inplace=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d3bfd37d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
